[gd_scene load_steps=6 format=3 uid="uid://teat5dkg13hn"]

[ext_resource type="FontFile" uid="uid://btujrl673mbct" path="res://Assets/fonts/PixelOperator8-Bold.ttf" id="1_1fp7o"]
[ext_resource type="Script" uid="uid://olxnmkx10mag" path="res://Scripts/Ui.gd" id="1_pyhgl"]
[ext_resource type="StyleBox" uid="uid://cxixyricj77g7" path="res://Assets/Styles/new_style_box_flat.tres" id="3_o3goa"]
[ext_resource type="StyleBox" uid="uid://b2pt6m8vb4b24" path="res://Assets/Styles/victory.tres" id="4_7yj50"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o3goa"]
content_margin_left = 1.0
content_margin_top = 1.0
content_margin_right = 1.0
content_margin_bottom = 1.0
bg_color = Color(1, 1, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[node name="Victory" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 84.0
offset_bottom = 60.0
script = ExtResource("1_pyhgl")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1447.0
offset_bottom = 918.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 324.0
offset_top = 192.0
offset_right = 475.0
offset_bottom = 266.0
scale = Vector2(5.39412, 6.52)
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_1fp7o")
theme_override_font_sizes/font_size = 16
text = "  Victory!!"

[node name="Label3" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_1fp7o")
theme_override_font_sizes/font_size = 16
text = "You died : "

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_1fp7o")
theme_override_font_sizes/font_size = 8
text = "Thank you for playing"

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_1fp7o")
theme_override_font_sizes/font_size = 8
theme_override_styles/focus = ExtResource("3_o3goa")
theme_override_styles/disabled = ExtResource("3_o3goa")
theme_override_styles/hover_pressed_mirrored = ExtResource("3_o3goa")
theme_override_styles/hover_pressed = ExtResource("3_o3goa")
theme_override_styles/hover_mirrored = ExtResource("3_o3goa")
theme_override_styles/hover = ExtResource("3_o3goa")
theme_override_styles/pressed_mirrored = ExtResource("3_o3goa")
theme_override_styles/pressed = ExtResource("3_o3goa")
theme_override_styles/normal_mirrored = ExtResource("3_o3goa")
theme_override_styles/normal = ExtResource("4_7yj50")
text = "Play Again"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_1fp7o")
theme_override_font_sizes/font_size = 8
theme_override_styles/focus = ExtResource("3_o3goa")
theme_override_styles/hover_pressed_mirrored = ExtResource("3_o3goa")
theme_override_styles/hover_pressed = ExtResource("3_o3goa")
theme_override_styles/hover_mirrored = ExtResource("3_o3goa")
theme_override_styles/hover = ExtResource("3_o3goa")
theme_override_styles/pressed_mirrored = ExtResource("3_o3goa")
theme_override_styles/pressed = ExtResource("3_o3goa")
theme_override_styles/normal = SubResource("StyleBoxFlat_o3goa")
text = "Main Menu"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
